# obara-3d-parser

./: .gitignore  README.md  build.ps1  obara-3d-parser.spec  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
app/: __init__.py  fea.py  geometry.py  main.py  main_window.py  material_db.py  panels.py  solver_backends.py  study.py  viewport.py
docs/: architecture.md  build_release.md  development.md  installation.md  materials.md  solver_backends.md  troubleshooting.md  user_guide.md
hooks/: runtime_hook_gmsh.py  runtime_hook_scipy.py
material_data/: sldmaterials.json  sldmaterials.sldmat  sldmaterials.txt  xml_to_json.py
tests/: test_fea.py  test_integration.py  test_simulation_workflow.py  test_solver_backends.py
tests/data/: BADC027616-JX.STEP  SRTX-C23133L-WL-X3-JX.STEP  bad.step
